# RT-lowpass-filter-on-Android

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: DynamicONNXRuntime.cmake  StaticONNXRuntime.cmake  cxxopts.cmake  liboboe.cmake
include/: App.hpp  AudioParams.hpp  BasicSessionHandler.hpp  GRUBinding.hpp  GRUInference.hpp  IIRGRUInfo.hpp  IIRGRUUtils.hpp  IOStreamHandler.hpp  Player.hpp  Recorder.hpp  SharedAudioBuffer.hpp  npy.hpp
include/GRUInferenceMethods/: GRUInferenceMethodBase.hpp  GeneralInferenceParams.hpp  IEParams.hpp  OrtSessionHandler.hpp
include/GRUInferenceMethods/Ort/: GRUOrtInference.hpp  OrtGRUInference.hpp  OrtSessionHandler.hpp
src/: App.cpp  main.cpp
